[package]
name = "stormbreaker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
csv = "1.3"
chrono = "0.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
mime = "0.3"
dashmap = "5.5"
http = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.4"
num_cpus = "1.16"
